--- a/src/content/technotes/TN0002-schema-naming-conventions.mdx
+++ b/src/content/technotes/TN0002-schema-naming-conventions.mdx
@@ -1,5 +1,6 @@
 ---
-title: TN0002 - Schema naming conventions
+title: Schema naming conventions
+id: TN0002
 description: Conventions for types, fields, and arguments
 tags: [schema design]
 ---
