--- a/src/content/technotes/TN0003-opentelemetry-traces-to-prometheus.mdx
+++ b/src/content/technotes/TN0003-opentelemetry-traces-to-prometheus.mdx
@@ -1,20 +1,23 @@
 ---
 title: Connecting OpenTelemetry traces to Prometheus
+id: TN0003
 tags: [server, observability]
 ---
+
 Operation traces provide insight into performance issues that are occurring at various execution points in your graph. However, individual traces don't provide a view of your graph's broader performance.
 
-Helpfully, you can convert your operation traces into aggregated metrics without requiring manual instrumentation. To accomplish this, we'll use `spanmetricsprocessor` in an OpenTelemetry Collector instance to automatically generate metrics from our existing trace spans. 
+Helpfully, you can convert your operation traces into aggregated metrics without requiring manual instrumentation. To accomplish this, we'll use `spanmetricsprocessor` in an OpenTelemetry Collector instance to automatically generate metrics from our existing trace spans.
 
 ## OpenTelemetry Collector configuration
-OpenTelemetry provides two different repositories for their OpenTelemetry Collector: 
 
-* The [core library](https://github.com/open-telemetry/opentelemetry-collector) 
-* The [contributor library](https://github.com/open-telemetry/opentelemetry-collector-contrib)
+OpenTelemetry provides two different repositories for their OpenTelemetry Collector:
+
+- The [core library](https://github.com/open-telemetry/opentelemetry-collector)
+- The [contributor library](https://github.com/open-telemetry/opentelemetry-collector-contrib)
 
 These repositories are similar in scope, but the contributor library includes extended features that aren't suitable for the core library. To derive performance metrics from our existing spans, we'll use the contributor library to take advantage of the `spanmetricsprocessor` via the associated Docker image.
 
-> We also recommend checking out the [Collector Builder](https://github.com/open-telemetry/opentelemetry-collector/tree/main/cmd/builder) to build binaries that are tailored to your environment instead of relying on prebuilt images. 
+> We also recommend checking out the [Collector Builder](https://github.com/open-telemetry/opentelemetry-collector/tree/main/cmd/builder) to build binaries that are tailored to your environment instead of relying on prebuilt images.
 
 When your OpenTelemetry Collector is ready to run, you can start configuring it with this barebones example:
 
@@ -35,7 +38,7 @@ receivers:
 
 exporters:
   prometheus:
-    endpoint: "0.0.0.0:9464"
+    endpoint: '0.0.0.0:9464'
 
 processors:
   batch:
@@ -55,7 +58,7 @@ service:
 
 ## Apollo Server setup
 
-Add the OTLP Exporter (`@opentelemetry/exporter-trace-otlp-http`  Node package) following the same instructions [as shown in the documentation for Apollo Server and OpenTelemetry.](https://www.apollographql.com/docs/federation/opentelemetry/) 
+Add the OTLP Exporter (`@opentelemetry/exporter-trace-otlp-http` Node package) following the same instructions [as shown in the documentation for Apollo Server and OpenTelemetry.](https://www.apollographql.com/docs/federation/opentelemetry/)
 
 ## Apollo Router setup
 
@@ -63,13 +66,13 @@ To send traces from the Apollo Router to OpenTelemetry Collector, see [this arti
 
 ## Prometheus setup
 
-Lastly, we need to add the OpenTelemetry Collector as a target within Prometheus. It'll use the standard port for Prometheus metrics (`9464`). 
+Lastly, we need to add the OpenTelemetry Collector as a target within Prometheus. It'll use the standard port for Prometheus metrics (`9464`).
 
 That's it- you should have access to span metrics using the same operation name!
 
 ## Example queries
 
-Here are a few sample queries to help explore the data structure being reported: 
+Here are a few sample queries to help explore the data structure being reported:
 
 - P95 by service: `histogram_quantile(.95, sum(rate(latency_bucket[5m])) by (le, service_name))`
 - Average latency by service and operation (e.g. `router` / `graphql.validate`): `sum by (operation, service_name)(rate(latency_sum{}[1m])) / sum by (operation, service_name)(rate(latency_count{}[1m]))`
