--- a/src/content/technotes/index.mdx
+++ b/src/content/technotes/index.mdx
@@ -4,7 +4,16 @@ title: Apollo tech notes
 
 This documentation set provides technical articles on specialized topics for Apollo tools and libraries. It is currently under development.
 
-See the left navigation for all available tech notes.
+import RecentNotes from '../../components/TechNotes/RecentNotes';
+import TagList from '../../components/TechNotes/TagList';
+
+## Recently updated
+
+<RecentNotes />
+
+## All tags
+
+<TagList />
 
 ## Reporting issues
 
