--- a/src/content/technotes/TN0014-contracts-patterns.mdx
+++ b/src/content/technotes/TN0014-contracts-patterns.mdx
@@ -4,15 +4,13 @@ id: TN0014
 tags: [contracts, best practices]
 ---
 
-[Contracts](/studio/contracts/) allow graph administrators to create a new supergraph based on a subset of another. Contracts allow teams to contribute to a single unified graph while also delivering use case-specific schemas to different types of consumers. Graph administrators use simple filter rules to generate Contract schemas that are a strict subset of the source supergraph.
+[Contracts](/studio/contracts/) allow teams to contribute to a single unified graph while also delivering use case-specific schemas to different types of consumers. Graph administrators use simple filter rules to generate Contract schemas that are a strict subset of the source supergraph.
 
 There are three filter approaches to create a contract from a supergraph, and it's important to know when to use each approach and why.
 
 ## Exclude tags (pruning approach)
 
-Using an "excludes" filter is the least amount of work, though the downside is it's easier to accidentally expose new fields if you forget to tag them appropriately. We only recommend this strategy only in cases where accidental exposure of sensitive fields will be acceptable, such as beta APIs or similar.
-
-Unless your organization has the ability to monitor schema changes and have an intake process, it's far too easy for developers to forget to tag a field that needs to be removed from the resulting supergraph, thus users are potentially able to access data they shouldn't be.
+Using an "excludes" filter is the least amount of work, though the downside is it's easier to accidentally expose new fields if you forget to tag them appropriately. We only recommend this strategy only in cases where accidental exposure of sensitive fields will be acceptable, such as beta APIs or similar, or if your organization has strict governance and review policies in place.
 
 As an example, let's look at a single subgraph using a tag `internal` to denote internal-only fields.
 
@@ -29,7 +27,7 @@ type User {
 
 It's likely that `supportLevel` has the same sensitivity as `supportNotes`, but the developer left off the tag, so it's now exposed in the contract.
 
-As a result, we find this approach best when it's acceptable to have fields exposed in the contract, such as the case with beta or bleeding-edge APIs where having the beta fields in the production variant wouldn't cause concern.
+As a result, Apollo finds this approach best when it's acceptable to have fields exposed in the contract, such as the case with beta or bleeding-edge APIs where having the beta fields in the production variant wouldn't cause concern.
 
 ## Include tags (deny by default)
 
@@ -68,7 +66,7 @@ As such, make sure to treat this as a combination of both of the previous approa
 - As you still rely on an exclude filter to refine the results, treat this approach much like the exclude approach discussed above. It can be easy to accidentally include fields as a result of still further refining using an exclude filter.
 - Use the include filter to ensure only the types/fields are being exposed that you want to expose.
 
-To wrap up the examples, the company decided to refactor to use this filtering approach:
+To wrap up the examples, let's look at the previous example where we've refactored to use this filtering approach:
 
 ```graphql
 type User @tag(name:"external") {
@@ -76,7 +74,7 @@ type User @tag(name:"external") {
 	email: String!
 	username: String!
 	description: String
-	support: SupportInformation! @tag(name:"internal")
+	support: SupportInformation! @tag(name: "internal")
 }
 
 type SupportInformation: @tag(name:"internal") {
@@ -85,10 +83,48 @@ type SupportInformation: @tag(name:"internal") {
 }
 ```
 
-Now that they created a new type to house the support information, they tagged that with the `internal` tag- meaning they'd use that to exclude from the resulting external API, but the general `User` type would be included beyond the `support` field. Should the `support` field not be tagged, it would result in a composition error, providing some safety.
+Now that we've created a new type to house the support information, we then tagged that with the `internal` tag- meaning we'd use that to exclude from the resulting external API, but the general `User` type would be included without the `support` field. Should the `support` field not be tagged, it would result in a composition error, providing some safety.
 
 This approach can be useful for a few situations. By allowing types to be tagged, it is possible to create “guardrails” against missing tags. As noted above, if a type is tagged but a field emitting that type is not, it will fail that contract's composition- so if the owning service can ensure that all types are tagged appropriately with the correct tag to filter, it can be a good way to still accomplish the exclude approach while getting some of the benefit of the include approach.
 
-On the other hand- this does mean that a strong governance program must be in place, otherwise it deals with the same issues as discussed in the exclude approach.
+On the other hand, this does mean that a strong governance program must be in place, otherwise it deals with the same issues as discussed in the exclude approach.
 
 Another possible use-case is to use this for documentation purposes, where including and omitting is far less of a concern vs. a realized API. Since a contract is just a graph variant, it is possible to link users to a contract's documentation, making it useful in this context as well.
+
+## Final consideration
+
+When considering the approaches described above, there is one more consideration you should have in mind when deciding the approach your company may take. As discussed above, your level of governance and adherence to those policies will help guide your decision making, but the reason why is not just due to forgetting to tag items.
+
+It is important to know that it is also possible for other subgraph teams to tag types that are within another subgraph. As an example, we have two subgraphs shown below.
+
+```graphql
+# subgraph a
+type Document @key(fields: "id") {
+  id: ID!
+  name: String
+  content: String
+}
+
+# subgraph b
+type Document @key(fields: "id") @tag(name: "internal") {
+  id: ID!
+  reviewedBy: AdminUser
+  approvedBy: AdminUser
+  contentScore: Float
+}
+```
+
+As you can see, the `Document` type was tagged as `internal` by subgraph `b`, which may have been intentional from the perspective of that team, as the intent was to tag only the new types added. Regardless, once the contract is built by Apollo Studio, the output will be:
+
+```graphql
+type Document @key(fields: "id") @tag(name: "internal") {
+  id: ID!
+  name: String
+  content: String
+  reviewedBy: AdminUser
+  approvedBy: AdminUser
+  contentScore: Float
+}
+```
+
+This is due to the fact that tag inheritance is applied _after_ composition- so any tags added at the type level will be inherited after the types have had all other fields added to it. In effect, this means that what might be considered correct applications of tags in one service can have adverse impact on other subgraphs.
