--- a/src/content/basics/resources/product-launch-stages.mdx
+++ b/src/content/basics/resources/product-launch-stages.mdx
@@ -23,7 +23,7 @@ Apollo open-source projects might provide pre-releases for early access:
 
 ### Alpha / Beta
 
-An **alpha** or **beta** is in volatile, active development. The version might not be feature-complete, and breaking API changes are possible between incremental versions of the alpha or beta. 
+An **alpha** or **beta** is in volatile, active development. The version might not be feature-complete, and breaking API changes are possible between incremental versions of the alpha or beta.
 
 Alphas and betas help Apollo gather feedback and issues from community members and customers who are enthusiastic early adopters.
 
@@ -49,6 +49,8 @@ A **deprecated** product, feature, or open-source release is still supported by 
 
 ### End-of-life
 
-Products, features, and open-source releases that reach **end-of-life** are **no longer supported or maintained by Apollo**. They no longer receive updates, security patches, or remediation for regressions. There is no commitment from Apollo to release further versions and no guarantee that the most recent version will continue to work. End-of-life products and features are no longer generally available.
+Products, features, and open-source releases that reach **end-of-life** are **no longer supported or maintained by Apollo**. They no longer receive updates, security patches, or remediation for regressions. There is no commitment from Apollo to release further versions and no guarantee that the most recent version will continue to work. End-of-life products and features are no longer generally available. 
 
-**Do not run end-of-life open-source releases in production.** Upgrade to the latest generally available release as soon as possible to ensure you continue receiving security patches, bug fixes, and new features. 
+End-of-life releases published to a package registry aren't removed from that registry. This means you can still install end-of-life versions past the end-of-life date (though Apollo strongly recommends against this). 
+
+**Do not run end-of-life open-source releases in production.** Upgrade to the latest generally available release as soon as possible to ensure you continue receiving security patches, bug fixes, new features, and compatibility with GraphOS features.
